src/test/ui/const-generics/issue-67375.min.stderr
error: generic parameters may not be used in const operations
  --> $DIR/issue-67375.rs:9:25
   |
LL |     inner: [(); { [|_: &T| {}; 0].len() }],
   |                         ^ cannot perform const operation using `T`
   |
   = note: type parameters may not be used in const expressions

error[E0392]: parameter `T` is never used
  --> $DIR/issue-67375.rs:7:12
   |
LL | struct Bug<T> {
   |            ^ unused parameter
   |
   = help: consider removing `T`, referring to it in a field, or using a marker such as `PhantomData`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0392`.
